--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,11 @@
 project(unit_tests)
 
 add_subdirectory(build)
-add_subdirectory(scene_man)
 add_subdirectory(asset)
-add_subdirectory(mesh)
 add_subdirectory(event)
 add_subdirectory(state)
+add_subdirectory(scene_man)
+add_subdirectory(mesh)
+add_subdirectory(interpolator)
+add_subdirectory(timer)
+add_subdirectory(uniforms)
