--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -5,7 +5,10 @@ file(GLOB_RECURSE r2_src
     "r2/*.cpp"
     "r2/managers/*.h"
     "r2/managers/*.cpp"
+    "r2/managers/drivers/gl/*.h"
+    "r2/managers/drivers/gl/*.cpp"
     "r2/utilities/*.h"
+    "r2/utilities/*.hpp"
     "r2/utilities/*.cpp"
     "r2/utilities/*.c"
     "r2/utilities/imgui/*.h"
