--- a/tests/asset/CMakeLists.txt
+++ b/tests/asset/CMakeLists.txt
@@ -1,6 +1,10 @@
 project(asset_test)
 
-add_executable(1_asset_test main.cpp)
+file(GLOB_RECURSE 1_asset_test_src "*.h" "*.cpp")
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+add_executable(1_asset_test ${1_asset_test_src})
+ 
+SOURCE_GROUP("" FILES ${1_asset_test_src})
 
 target_include_directories(1_asset_test PUBLIC ../../engine)
 target_link_libraries(1_asset_test r2)
