--- a/tests/state/CMakeLists.txt
+++ b/tests/state/CMakeLists.txt
@@ -1,6 +1,10 @@
 project(state_test)
 
-add_executable(5_state_test main.cpp)
+file(GLOB_RECURSE 3_state_test_src "*.h" "*.cpp")
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+add_executable(3_state_test ${3_state_test_src})
+ 
+SOURCE_GROUP("" FILES ${3_state_test_src})
 
-target_include_directories(5_state_test PUBLIC ../../engine)
-target_link_libraries(5_state_test r2)
+target_include_directories(3_state_test PUBLIC ../../engine)
+target_link_libraries(3_state_test r2)
