--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(mesh)
 add_subdirectory(interpolator)
 add_subdirectory(timer)
 add_subdirectory(uniforms)
+add_subdirectory(camera)
