--- a/tests/event/CMakeLists.txt
+++ b/tests/event/CMakeLists.txt
@@ -8,3 +8,4 @@ SOURCE_GROUP("" FILES ${2_event_test_src})
 
 target_include_directories(2_event_test PUBLIC ../../engine)
 target_link_libraries(2_event_test r2)
+set_property(TARGET 2_event_test PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}")
