--- a/tests/state/CMakeLists.txt
+++ b/tests/state/CMakeLists.txt
@@ -8,3 +8,4 @@ SOURCE_GROUP("" FILES ${3_state_test_src})
 
 target_include_directories(3_state_test PUBLIC ../../engine)
 target_link_libraries(3_state_test r2)
+set_property(TARGET 3_state_test PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}")
