--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(interpolator)
 add_subdirectory(timer)
 add_subdirectory(uniforms)
 add_subdirectory(camera)
+add_subdirectory(entity)
