Optimized a bunch of weak areas, identified weak areas that need optimizing, temporarily disabled memory management logic, made state & entity classes virtual so that they can be customized in C++ and not just with JS, more

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(uniforms)
 add_subdirectory(camera)
 add_subdirectory(entity)
 add_subdirectory(mesh_component)
+add_subdirectory(unscripted)
