--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(mesh_component)
 add_subdirectory(unscripted)
 add_subdirectory(playground)
 add_subdirectory(physics)
+add_subdirectory(scripted_system)
